apps/media/mylar/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mylar
spec:
  selector:
    matchLabels:
      app: mylar
  template:
    metadata:
      labels:
        app: mylar
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - pc
      containers:
        - name: mylar
          image: lscr.io/linuxserver/mylar3:latest
          ports:
            - containerPort: 5656
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /config
              name: config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mylar-data
        - name: config
          persistentVolumeClaim:
            claimName: mylar-config
