apps/media/mylar/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mylar
spec:
  selector:
    app: mylar
  ports:
    - port: 8090
      targetPort: 8090
