apps/media/mylar/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mylar
  labels:
    name: mylar
spec:
  tls:
    - hosts:
        - mylar.internal.vkolobara.com
  rules:
    - host: mylar.internal.vkolobara.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mylar
                port:
                  number: 8090
